k8s/authentication.yaml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: authentication-deployment
  labels:
    app: authentication
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication
  template:
    metadata:
      labels:
        app: authentication
    spec:
      containers:
      - name: auth
        image: gcr.io/spexflix/authentication:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: web
---
kind: Service
apiVersion: v1
metadata:
  name: authentication
spec:
  selector:
    app: authentication
  ports:
  - name: web
    protocol: TCP
    port: 8080
    targetPort: web
