k8s/content.yaml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: content-deployment
  labels:
    app: content
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content
  template:
    metadata:
      labels:
        app: content
    spec:
      containers:
      - name: content
        image: gcr.io/spexflix/content:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: rest
---
kind: Service
apiVersion: v1
metadata:
  name: content
spec:
  selector:
    app: content
  ports:
  - name: rest
    protocol: TCP
    port: 8080
    targetPort: rest
