k8s/front-end.yaml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: gateway-production
  labels:
    app: gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
      env: production
  template:
    metadata:
      labels:
        app: gateway
        env: production
    spec:
      containers:
      - name: gateway
        image: gcr.io/spexflix/front-end:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: web
        readinessProbe:
          httpGet:
            path: /healthz
            port: web
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 15
        livenessProbe:
          httpGet:
            path: /healthz
            port: web
          initialDelaySeconds: 15
          timeoutSeconds: 1
          periodSeconds: 15
---
kind: Service
apiVersion: v1
metadata:
  name: front-end
spec:
  selector:
    app: gateway
  type: NodePort
  ports:
  - name: web
    protocol: TCP
    port: 8080
    targetPort: web
