k8s/users.yaml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: users-production
  labels:
    app: users
spec:
  replicas: 2
  selector:
    matchLabels:
      app: users
      env: production
  template:
    metadata:
      labels:
        app: users
        env: production
    spec:
      containers:
      - name: users
        image: gcr.io/spexflix/users:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: web
        resources:
          requests:
            memory: "5Mi"
            cpu: "100m"
          limits:
            memory: "10Mi"
            cpu: "250m"
        readinessProbe:
          httpGet:
            path: /healthz
            port: web
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 15
        livenessProbe:
          httpGet:
            path: /healthz
            port: web
          initialDelaySeconds: 15
          timeoutSeconds: 1
          periodSeconds: 15
---
kind: Service
apiVersion: v1
metadata:
  name: users
spec:
  selector:
    app: users
  type: NodePort
  ports:
  - name: web
    protocol: TCP
    port: 8080
    targetPort: web
