k8s/web.yaml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: web-production
  labels:
    app: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
      env: production
  template:
    metadata:
      labels:
        app: web
        env: production
    spec:
      containers:
      - name: web
        image: gcr.io/spexflix/web:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: web
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "64Mi"
            cpu: "250m"
        readinessProbe:
          httpGet:
            path: /healthz
            port: web
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 15
        livenessProbe:
          httpGet:
            path: /healthz
            port: web
          initialDelaySeconds: 15
          timeoutSeconds: 1
          periodSeconds: 15
---
kind: Service
apiVersion: v1
metadata:
  name: web
spec:
  selector:
    app: web
  type: NodePort
  ports:
  - name: web
    protocol: TCP
    port: 8080
    targetPort: web
